2-example/3-myapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: second-app
  namespace: production
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: second-app
